Attempting to fix layout of 404 page on mobile

--- a/application/themes/safer/css/application.less
+++ b/application/themes/safer/css/application.less
@@ -255,7 +255,7 @@ h1, h2, h3 {
   background-color: #eee;
   border: 1px solid #b3b3b3;
   margin: 0 auto;
-  width: 500px;
+  max-width: 500px;
   padding: 10px;
   margin-top: 30px;
   margin-bottom: 30px;
